--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -85,6 +85,11 @@
             <version>1.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
 
     </dependencies>
 
