--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.0",
     "element-ui": "^2.15.14",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
